--- a/sales-analysis-and-visualization.ipynb
+++ b/sales-analysis-and-visualization.ipynb
@@ -89,7 +89,7 @@
    },
    "outputs": [],
    "source": [
-    "sales = pd.read_csv('../input/supermarket-sales/supermarket_sales - Sheet1.csv')"
+    "sales = pd.read_csv(r'C:\Users\SHUBHAM KESHARI\Desktop\Projects\Sales_Analysis\supermarket_sales - Sheet1.csv')"
    ]
   },
   {
